--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <%= stylesheet_link_tag 'typography' %>
   <%= stylesheet_link_tag 'grid' %>
   <%= stylesheet_link_tag 'jquery-ui' %>
+  <%= stylesheet_link_tag 'mobile' if mobile_device? %>
   <%= javascript_include_tag :defaults, 'menu', 'highcharts' %>
   <%= yield(:head) %>
 </head>
