--- a/app/views/lookup_keys/index.html.erb
+++ b/app/views/lookup_keys/index.html.erb
@@ -2,7 +2,7 @@
 
 <table class="table table-bordered table-striped">
   <tr>
-    <th><%= sort :key, :as => "Variable" %></th>
+    <th><%= sort :key, :as => "Variable" %> or <%= sort :key, {:as => "Parameter"}, {:class => "alternative"} %></th>
     <th><%= sort :puppetclass %></th>
     <th>Number of Values</th>
     <th></th>
@@ -10,10 +10,17 @@
 
 <% @lookup_keys.each do |lookup_key| %>
   <tr class="<%= cycle("even", "odd") -%>">
-    <td><%= link_to_if_authorized h(lookup_key.key), hash_for_edit_lookup_key_path(:id => lookup_key) %></td>
-    <td><%= link_to_if_authorized h(lookup_key.puppetclass), hash_for_edit_puppetclass_path(:id => lookup_key.puppetclass) if lookup_key.puppetclass %></td>
+    <td><%= link_to_if_authorized h(lookup_key.parameter_name), hash_for_edit_lookup_key_path(:id => lookup_key), :class => (lookup_key.is_parameter? ? "alternative" : nil) %></td>
+    <td><% if lookup_key.puppetclass -%>
+      <%= link_to_if_authorized h(lookup_key.puppetclass), hash_for_edit_puppetclass_path(:id => lookup_key.puppetclass) %>
+    <% else -%>
+      <span class="invalid"><%= lookup_key.puppetclass_name %></span>
+    <% end %></td>
     <td><%=h lookup_key.lookup_values.count %></td>
     <td><%= display_delete_if_authorized hash_for_lookup_key_path(:id => lookup_key), :confirm => "Delete #{lookup_key.key}?" %></td>
   </tr>
 <% end %>
 </table>
+
+<%= page_entries_info @lookup_keys, :more => " - <strong><span class='select_count'>0</span></strong> Selected" %>
+<%= will_paginate @lookup_keys %>
