Improved smart-variable index
Added paging controller.
Add old puppetclass name for parameter smart-variables,
by taking the first part of its name, with red coloration.
Added different coloring for parameters, as opposed to variables.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -318,6 +318,8 @@ margin-left:0;margin-bottom:18px;list-style:none;display: inline;
 .table th{background: rgba(0, 0, 0, 0.08);}
 
 .delete{color: #b94a48 !important;}
+.invalid{color: #b97776 !important;}
+a.alternative{color: #75A !important;}
 
 .setting_value form { margin: 0 !important;}
 .form-actions{
