--- a/app/views/lookup_keys/_fields.html.erb
+++ b/app/views/lookup_keys/_fields.html.erb
@@ -1,7 +1,16 @@
 <div <%= "id=#{(f.object.key || 'new_lookup_keys').to_s.gsub(' ','_')} class='tab-pane fields' " %> >
   <%= remove_child_link "Remove #{f.object.new_record? ? "Variable" : f.object}", f , {:class => 'btn btn-danger hide'} unless controller_name == "lookup_keys" %>
+  <%=
+    if params["puppetclass_id"] # new smart-var inside a puppetclass (REST nesting only)
+      # Show the parent puppetclass as a context, but permit no change
+      select_f f, :puppetclass_id, [Puppetclass.from_param(params["puppetclass_id"])], :id, :to_label, {}, {:label => "Puppet class", :disabled => true}
+    else # new smart-var with no particular context
+      # Give a select for choosing the parent puppetclass
+      select_f f, :puppetclass_id, Puppetclass.all, :id, :to_label, { :include_blank => 'None' }, {:label => "Puppet class"}
+    end unless @puppetclass # nested smart-vars form in a tab of puppetclass/_form: no edition allowed, and the puppetclass is already visible as a context
+  %>
   <%= text_f f, :key, :label => "Name" %>
-  <%= checkbox_f f, :'is_param', :label => "Is a parameter" %>
+  <%= checkbox_f f, :'is_param', :label => "Class parameter" %>
   <%= text_f f, :description %>
   <%= text_f f, :default_value, :class => "span6", :help_inline => popover("?","value to use when there is no match", :title => "Default Value").html_safe %>
   <%= selectable_f f, :validator_type, options_for_select(LookupKey::VALIDATION_TYPES, f.object.validator_type),
