--- a/app/views/lookup_keys/index.html.erb
+++ b/app/views/lookup_keys/index.html.erb
@@ -1,5 +1,11 @@
 <% title "Smart variables" %>
 
+<% if params["puppetclass_id"]
+     title_actions  display_link_if_authorized("New smart variable", hash_for_new_puppetclass_lookup_key_path)
+   else
+     title_actions  display_link_if_authorized("New smart variable", hash_for_new_lookup_key_path)
+   end %>
+
 <table class="table table-bordered table-striped">
   <tr>
     <th><%= sort :key, :as => "Variable" %> or <%= sort :key, {:as => "Parameter"}, {:class => "alternative"} %></th>
@@ -10,7 +16,11 @@
 
 <% @lookup_keys.each do |lookup_key| %>
   <tr class="<%= cycle("even", "odd") -%>">
-    <td><%= link_to_if_authorized h(lookup_key.key), hash_for_edit_lookup_key_path(:id => lookup_key), :class => (lookup_key.is_param ? "alternative" : nil) %></td>
+    <td><%= if params["puppetclass_id"]
+              link_to_if_authorized h(lookup_key.key), hash_for_edit_puppetclass_lookup_key_path(:puppetclass_id => params["puppetclass_id"], :id => lookup_key), :class => (lookup_key.is_param ? "alternative" : nil)
+            else
+              link_to_if_authorized h(lookup_key.key), hash_for_edit_lookup_key_path(:id => lookup_key), :class => (lookup_key.is_param ? "alternative" : nil)
+            end %></td>
     <td><%= link_to_if_authorized h(lookup_key.puppetclass), hash_for_edit_puppetclass_path(:id => lookup_key.puppetclass) if lookup_key.puppetclass %></td>
     <td><%=h lookup_key.lookup_values.count %></td>
     <td><%= display_delete_if_authorized hash_for_lookup_key_path(:id => lookup_key), :confirm => "Delete #{lookup_key.key}?" %></td>
