Permit help_inline for checkboxes
The :help_inline option was appended as raw text after the checkboxes.
I created :help_text for this usage instead,
and let :help_inline work as intended, inside the <label>,
so that it stays inline.

--- a/app/views/common/_hypervisor.html.erb
+++ b/app/views/common/_hypervisor.html.erb
@@ -18,7 +18,7 @@
         <% else -%>
           <%= selectable_f f, :interface, interfaces %>
         <% end -%>
-        <%= checkbox_f f, :powerup, :help_inline => "Power up this instance", :checked => true, :label => "Start?" if type == "host" %>
+        <%= checkbox_f f, :powerup, :help_text => "Power up this instance", :checked => true, :label => "Start?" if type == "host" %>
       <% end -%>
     </div>
   </div>
