--- a/app/views/auth_source_ldaps/_form.html.erb
+++ b/app/views/auth_source_ldaps/_form.html.erb
@@ -11,7 +11,7 @@
   <%= password_f f, :account_password, :onfocus => "this.value='';", :help_inline => "Use this account to authenticate, <i>optional</i>".html_safe %>
   <%= text_f f, :base_dn, :label => "basedn", :class => "input-xxlarge" %>
   <%= checkbox_f f, :onthefly_register, :label => "On-the-fly user creation",
-    :help_inline => "LDAP user will have his Foreman account automatically created the first time he logs into Foreman" %>
+    :help_text => "LDAP user will have his Foreman account automatically created the first time he logs into Foreman" %>
   <%= field_set_tag("LDAP Attributes mapping") do %>
     <%= text_f f, :attr_login, :help_inline => "e.g. uid" %>
     <%= text_f f, :attr_firstname, :help_inline => "e.g. givenName" %>
