--- a/app/views/compute_resources_vms/form/_libvirt.html.erb
+++ b/app/views/compute_resources_vms/form/_libvirt.html.erb
@@ -30,4 +30,4 @@
 </div>
 <!--TODO # Move to a helper-->
 <% checked = params[:host]&&params[:host][:compute_attributes][:start] || '1' %>
-<%= checkbox_f f, :start, { :checked => (checked == '1'), :help_inline => "Power ON this machine" } if new %>
+<%= checkbox_f f, :start, { :checked => (checked == '1'), :help_text => "Power ON this machine" } if new %>
