--- a/app/views/compute_resources_vms/form/_ovirt.html.erb
+++ b/app/views/compute_resources_vms/form/_ovirt.html.erb
@@ -40,4 +40,4 @@
   </div>
 </div>
 <% checked = params[:host]&&params[:host][:compute_attributes][:start] || '1' %>
-<%= checkbox_f f, :start, { :checked => (checked == '1'), :help_inline => "Power ON this machine" } if new %>
+<%= checkbox_f f, :start, { :checked => (checked == '1'), :help_text => "Power ON this machine" } if new %>
