wip smartvars in host pages, not working

--- a/app/views/puppetclasses/_classes.html.erb
+++ b/app/views/puppetclasses/_classes.html.erb
@@ -12,6 +12,7 @@
                 <% style = selected_puppet_classes.include?(klass) ? "hide" : "#{cycle('even', 'odd')}" %>
                 <%= content_tag_for :li, klass, :class=> style do %>
                   <%= link_to_add_puppetclass(klass, type) %>
+                  <%= smart_var_for(klass, type) %>
                 <% end -%>
               <% end -%>
             <% end -%>
