--- a/app/views/hosts/_form.html.erb
+++ b/app/views/hosts/_form.html.erb
@@ -55,9 +55,14 @@
     <%= render('unattended', :f => f) if SETTINGS[:unattended] and @host.managed -%>
 
     <div class="tab-pane"  id="params">
+      <h6>Puppet classes Parameters</h6>
+      <p></p>
+      <%= render "puppetclasses/classes_parameters", { :obj => @host } %>
+
       <h6>Included Parameters via inheritance</h6>
       <p></p>
       <%= render "common_parameters/inherited_parameters", { :inherited_parameters => @host.host_inherited_params } %>
+
       <h6>Host Parameters</h6>
       <p></p>
       <%= render "common_parameters/parameters", { :f => f, :type => :host_parameters } %>
