--- a/app/views/puppetclasses/_class_selection.html.erb
+++ b/app/views/puppetclasses/_class_selection.html.erb
@@ -13,7 +13,8 @@
       <% if authorized_for(:host_editing, :edit_classes) -%>
         <%= render :partial => "puppetclasses/selectedClasses",
           :collection => obj.puppetclasses ,:as => :klass,
-          :locals => { :type => obj.class.to_s.downcase } %>
+          :locals => { :type => obj.class.to_s.downcase,
+            :host => obj } %>
       <% else -%>
         <% obj.puppetclasses.each do |klass| %>
           <li data-original-title="Not authorized to edit classes" rel="twipsy" style='color:black;'><%= h klass.name %></li>
