--- a/app/views/puppetclasses/_class_parameters.html.erb
+++ b/app/views/puppetclasses/_class_parameters.html.erb
@@ -1,16 +1,25 @@
 <% unless klass.lookup_keys.empty? -%>
-  <div class="control-group" id="puppetclass_<%= klass.id %>_params">
-    <label class="control-label"><%= klass.name %></label>
-    <% klass.lookup_keys.each do |key| -%>
-      <div class="controls">
-        <% name = key.key
-           value = key.value_before_type_cast(key.value_for host, host_facts) -%>
-        <%= text_field_tag "name_#{name}", name, :class => "span2", :disabled => true %>
-        <%= text_area_tag "value_#{value}", value, :rows => 2, :class => "span7", :disabled => true %>
-        <span class="help-inline">
-          <%= link_to_function(icon_text("random"), "override_param(this)", :title => "Override this value") if authorized_via_my_scope("host_editing", "create_params") %>
-        </span>
-      </div>
-    <% end -%>
-  </div>
+  <% klass.lookup_keys.each_with_index do |key,i| -%>
+    <tr id="puppetclass_<%= klass.id %>_params[<%= i %>]">
+      <% if i == 0 -%>
+        <td rowspan="<%= klass.lookup_keys.size %>"><%= klass.name %></td>
+      <% else -%>
+        <input type="hidden" /><%# In order to use the class .hide-first-col with rowspan, we must have an extra, invisible first-child. %>
+      <% end -%>
+      <%
+        name = key.key
+        infos = { :used_matcher => nil }
+        value = key.value_before_type_cast key.value_for host, host_facts, :obs_matcher_block => Proc.new { |h| infos = h }
+        origin = '(default value)'
+        origin = infos[:used_matcher] unless infos[:used_matcher].nil?
+      -%>
+      <td><%= content_tag :span, name, :class => "span2" %></td>
+      <td><%= text_area_tag "value_#{name}", value, :rows => 2, :class => "span4", :disabled => true %></td>
+      <td><%= content_tag :span, key.validator_type, :class => "span1" %></td>
+      <td><%= content_tag :span, origin, :class => "span2" %></td>
+      <td><span class="help-inline">
+        <%= link_to_function(icon_text("random"), "override_param(this)", :title => "Override this value") if authorized_via_my_scope("host_editing", "create_params") %>
+      </span></td>
+    </tr>
+  <% end -%>
 <% end -%>
