Color wrench to reflect params errors/warnings
The .ui-icon.warning could use a darker orange,
the highlight version of the icons are not visible enough
over a smoked background.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,6 +19,13 @@
     background-position: -80px -128px;
 }
 
+.ui-icon.error{
+    background-image: url('../images/ui-icons_cd0a0a_256x240.png');
+}
+.ui-icon.warning{
+    background-image: url('../images/ui-icons_f6cf3b_256x240.png');
+}
+
 .ui-autocomplete-completed {
     color: #aaa;
     font-weight: lighter;
