--- a/app/views/puppetclasses/_class_parameters.html.erb
+++ b/app/views/puppetclasses/_class_parameters.html.erb
@@ -9,7 +9,8 @@
       <%
         name = key.key
         infos = { :used_matcher => nil }
-        value_orig = key.value_for host, host_facts, :obs_matcher_block => Proc.new { |h| infos = h }
+        errors = Set.new
+        value_orig = key.value_for host, host_facts, :obs_matcher_block => Proc.new { |h| infos = h }, :on_unavailable_fact => Proc.new { |f,h| errors << f; "{UNKNOWN_FACT:#{f}}" }
         value = key.value_before_type_cast value_orig
         origin = '(default value)'
         origin = infos[:used_matcher] unless infos[:used_matcher].nil?
@@ -18,11 +19,16 @@
         if value_orig.nil?
           if key.is_mandatory
             diagnostic_class << 'error'
-            diagnostic_helper = popover 'Error', 'Mandatory parameter without value.<br/><b>Please override!</b>'
+            diagnostic_helper = popover 'No value error', 'Mandatory parameter without value.<br/><b>Please override!</b>'
           else
             diagnostic_class << 'warning'
-            diagnostic_helper = popover 'Warning', 'Optional parameter without value.<br/><i>Won\'t be given to Puppet.</i>'
+            diagnostic_helper = popover 'No value warning', 'Optional parameter without value.<br/><i>Won\'t be given to Puppet.</i>'
           end
+        end
+        if errors.size > 0
+          diagnostic_class.delete 'warning'
+          diagnostic_class << 'error'
+          diagnostic_helper = popover 'Fact error', 'One or more unknown facts were encountered during evaluation:<ul>' + errors.sort.map {|v| "<li>#{v}</li>" }.join + '</ul>'
         end
       -%>
       <td><%= content_tag :span, name, :class => "span2" %></td>
