Host/hostgroup edit: hide internal Puppet classes by default
If a Puppet class is declared as "internal", it won't be displayed in
the "Puppet Classes" tab when editing a host or a hostgroup for
instance.

To declare a class as internal, one must add a "modeline" in the class
documentation itself. Here's an example:

    # Class: mymodule::myclass
    #
    # foreman: { internal-class }
    class mymodule::myclass {
        ..
    }

A modeline is a one-line JSON hash, preceded by "foreman:". Only
whitespaces are allowed before the prefix and after the structure.
"internal-class" must appear as a key, with whatever one wants as the
associated value.

In the "Puppet Classes" tab, one can display internal classes in the
"Available Classes" list by clicking on a new button, located on the
right of the "Filter classes" text field.

In the "Included classes" and "Available Classes", internal classes are
displayed in a light grey to be able to distinguish them from the normal
classes.

--- a/app/views/puppetclasses/_class_selection.html.erb
+++ b/app/views/puppetclasses/_class_selection.html.erb
@@ -17,13 +17,13 @@
             :host => obj } %>
       <% else -%>
         <% obj.puppetclasses.each do |klass| %>
-          <li data-original-title="Not authorized to edit classes" rel="twipsy" style='color:black;'><%= h klass.name %></li>
+          <li data-original-title="Not authorized to edit classes" rel="twipsy" style='color:black;'<% if klass.modeline.has_key?("internal-class") %>class="internal_puppetclass"<% end %>><span><%= h klass.name %></span></li>
         <% end -%>
       <% end -%>
     </ul>
     <ul>
       <% parent_classes(obj).each do |klass| %>
-        <li data-original-title="included already from host group" rel="twipsy" style='color:black;'><%= h klass.name %></li>
+        <li data-original-title="included already from host group" rel="twipsy" style='color:black;'<% if klass.modeline.has_key?("internal-class") %>class="internal_puppetclass"<% end %>><span><%= h klass.name %></span></li>
       <% end -%>
     </ul>
   </div>
@@ -32,10 +32,19 @@
     <h3>Available Classes</h3>
     <div class='control-group'>
       <input placeholder="Filter classes" class="search-query" onkeyup="filter_puppet_classes(this);" type='text'>
+      <%= link_to_function(
+        icon_text("list-alt", ""),
+        "toggle_internal_puppetclasses('#available_puppet_klasses')",
+        {
+          :class => "btn",
+          :'data-original-title' => "Toggle display of internal Puppet classes",
+          :rel => 'twipsy'
+        }) %>
     </div>
-    <div class="row">
+    <div id="available_puppet_klasses" class="row">
       <%= render "puppetclasses/classes",
-        :puppetclasses => (defined?(@environment) ? @environment.puppetclasses : Puppetclass.all), :selected_puppet_classes => obj.all_puppetclasses,
+	:puppetclasses => (defined?(@environment) ? @environment.puppetclasses : Puppetclass.all),
+	:selected_puppet_classes => obj.all_puppetclasses,
         :type => obj.class.to_s.downcase
       %>
     </div>
