--- a/app/views/puppetclasses/_classes.html.erb
+++ b/app/views/puppetclasses/_classes.html.erb
@@ -9,7 +9,9 @@
               <% unless authorized_for(:host_editing, :edit_classes) -%>
                 <li data-original-title="Not authorized to edit classes" rel="twipsy" style='colour:black;'><%= h klass.name %></li>
               <% else -%>
-                <% style = selected_puppet_classes.include?(klass) ? "hide" : "#{cycle('even', 'odd')}" %>
+                <% style = selected_puppet_classes.include?(klass) || klass.modeline.has_key?("internal-class") ? "hide" : "#{cycle('even', 'odd')}" %>
+                <% style += " selected_puppetclass" if selected_puppet_classes.include?(klass) %>
+                <% style += " internal_puppetclass" if klass.modeline.has_key?("internal-class") %>
                 <%= content_tag_for :li, klass, :class=> style do %>
                   <%= link_to_add_puppetclass(klass, type) %>
                   <%= link_to_edit_puppetclass_vars(klass, @host, type, { :class => 'hide' }) %>
