Permit overridding a puppetclass parameter in host edit

--- a/app/views/hosts/_form.html.erb
+++ b/app/views/hosts/_form.html.erb
@@ -70,6 +70,9 @@
         <tbody>
           <%= render "puppetclasses/classes_parameters", { :obj => @host } %>
         </tbody>
+        <tfoot class="hide"><%# Hidden button to add an override, used from javascript only -%>
+          <tr><td colspan="6"><%= authorized_via_my_scope('host_editing', 'create_params') ? link_to_add_fields('+ Add Override', f, :lookup_values, 'common_parameters/puppetclass_parameter', :destination => '$("#parameters > .btn-success")') : '' %></td></tr>
+        </tfoot>
       </table>
 
       <h6>Included Parameters via inheritance</h6>
