--- a/app/views/puppetclasses/_class_parameters.html.erb
+++ b/app/views/puppetclasses/_class_parameters.html.erb
@@ -1,11 +1,11 @@
 <% unless klass.lookup_keys.empty? -%>
   <% klass.lookup_keys.each_with_index do |key,i| -%>
-    <tr id="puppetclass_<%= klass.id %>_params[<%= i %>]">
-      <% if i == 0 -%>
-        <td rowspan="<%= klass.lookup_keys.size %>"><%= klass.name %></td>
-      <% else -%>
-        <input type="hidden" /><%# In order to use the class .hide-first-col with rowspan, we must have an extra, invisible first-child. %>
-      <% end -%>
+    <tr id="puppetclass_<%= klass.id %>_params[<%= key.id %>]">
+      <%= content_tag :td, (i == 0 ? {:rowspan => klass.lookup_keys.size} : {:class => 'hide'}) do
+        # In order to use the class .hide-first-col, we must have an extra, invisible cell.
+        # Plus, we make the class name available from javascript without having to look at any previous row.
+        content_tag :span, klass.name, :'data-property' => 'class'
+      end %>
       <%
         name = key.key
         infos = { :used_matcher => nil }
@@ -31,17 +31,17 @@
           diagnostic_helper = popover 'Fact error', 'One or more unknown facts were encountered during evaluation:<ul>' + errors.sort.map {|v| "<li>#{v}</li>" }.join + '</ul>'
         end
       -%>
-      <td><%= content_tag :span, name, :class => "span2" %></td>
+      <td><%= content_tag :span, name, :class => "span2", :'data-property' => 'name' %></td>
       <td>
         <%= content_tag :div, :class => ['control-group'] + diagnostic_class do -%>
-          <%= text_area_tag "value_#{name}", value, :rows => 2, :class => ['span4'], :disabled => true %>
+          <%= text_area_tag "value_#{name}", value, :rows => 2, :class => ['span4'], :'data-property' => 'value', :disabled => true %>
           <%= diagnostic_helper %>
         <% end -%>
       </td>
-      <td><%= content_tag :span, key.validator_type, :class => "span1" %></td>
+      <td><%= content_tag :span, key.validator_type, :class => "span1", :'data-property' => 'type' %></td>
       <td><%= content_tag :span, origin, :class => "span2" %></td>
       <td><span class="help-inline">
-        <%= link_to_function(icon_text("random"), "override_param(this)", :title => "Override this value") if authorized_via_my_scope("host_editing", "create_params") %>
+          <%= link_to_function(icon_text("random"), "override_class_param(this)", :title => "Override this value", :'data-tag' => 'override') if authorized_via_my_scope("host_editing", "create_params") %>
       </span></td>
     </tr>
   <% end -%>
