Show value before override in inherited puppetclasses parameters
This provides a way to see what will the value be if the user deletes
the override.

NOTA BENA: The user can create a new override, but it somehow fails when
    it comes to updating or deleting an existing overriden lookup_value.
    The SQL query generated is wrong:
    Mysql::Error: Operand should contain 1 column(s):
      SELECT `lookup_values`.* FROM `lookup_values`
      WHERE `lookup_values`.`id` IN (5)
        AND (SELECT lookup_values.* FROM lookup_values WHERE
          (lookup_values.match = 'fqdn=testvm1-rvrignaud'))
      ORDER BY LOWER(lookup_values.value)
    This may be due to the :finder_sql, but Rails fails too with
    3 levels of nested associations or more
    (host -> host_classes -> lookup_keys -> lookup_values).

--- a/app/views/puppetclasses/_class_parameters.html.erb
+++ b/app/views/puppetclasses/_class_parameters.html.erb
@@ -10,7 +10,7 @@
         name = key.key
         infos = { :used_matcher => nil }
         errors = Set.new
-        value_orig = key.value_for host, host_facts, :obs_matcher_block => Proc.new { |h| infos = h }, :on_unavailable_fact => Proc.new { |f,h| errors << f; "{UNKNOWN_FACT:#{f}}" }
+        value_orig = key.value_for host, host_facts, :obs_matcher_block => Proc.new { |h| infos = h }, :on_unavailable_fact => Proc.new { |f,h| errors << f; "{UNKNOWN_FACT:#{f}}" }, :skip_fqdn => true
         value = key.value_before_type_cast value_orig
         origin = '(default value)'
         origin = infos[:used_matcher] unless infos[:used_matcher].nil?
