Fix failing tests
link_to_edit_puppetclass_vars now uses the corresponding object class in
the call to hash_for, as Hostgroups can edit their puppetclasses'
parameters too.
Added the corresponding route

Changed "class Jail < Safemode::Jail" to attr_accessible.
Added more attr_accessible to Host, maybe too much, I saw Rails
complaining about those fields in the logs when running the tests.
There is still two complaints for the field "id" of ComputeResource and Image.

Restored the validate_presence of :value in Parameter.

Puppetclass.from_param understands ids in addition of the output of
to_param. It's more flexible this way, but another fix would be to call
.to_param instead of .id in the tests.

app/views/puppetclasses/_classes.html.erb uses the obj object provided
in the locals, as this template is used from Hostgroup in addition to Host.
app/views/puppetclasses/_class_selection.html.erb didn't pass that object.

Updated db_tree and disk_tree in Environment to reflect eventual
presence of parameters.

--- a/app/views/puppetclasses/_class_selection.html.erb
+++ b/app/views/puppetclasses/_class_selection.html.erb
@@ -36,6 +36,7 @@
     <div class="row">
       <%= render "puppetclasses/classes",
         :puppetclasses => (defined?(@environment) ? @environment.puppetclasses : Puppetclass.all), :selected_puppet_classes => obj.all_puppetclasses,
+        :obj => obj,
         :type => obj.class.to_s.downcase
       %>
     </div>
