--- a/app/views/puppetclasses/_classes.html.erb
+++ b/app/views/puppetclasses/_classes.html.erb
@@ -12,7 +12,7 @@
                 <% style = selected_puppet_classes.include?(klass) ? "hide" : "#{cycle('even', 'odd')}" %>
                 <%= content_tag_for :li, klass, :class=> style do %>
                   <%= link_to_add_puppetclass(klass, type) %>
-                  <%= link_to_edit_puppetclass_vars(klass, @host, type, { :class => 'hide' }) %>
+                  <%= link_to_edit_puppetclass_vars(klass, obj, type, { :class => 'hide' }) %>
                 <% end -%>
               <% end -%>
             <% end -%>
