Fix host/edit smart-variables dialog box
Wasn't updated when the elements were renamed
(#*puppetclasses_parameters) after the addition of override.

Display the overridden values too.

Fix mark_params_override to work inside the dialog.

Hide puppetclass name in dialog box for overridden parameters.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -361,4 +361,5 @@ border-radius: 4px;
 .override-param{
   text-decoration: line-through;
 }
+.hide-puppetclass-name [data-property="class"]{display:none;}
 .btn-toolbar-condensed{margin: 0;}
