UI adaptations for environments 1:n puppetclasses relation
Include environment in Puppetclass.to_param. Adapt .from_param.

Show parent environment in smart-vars index.

Puppetclasses selection uses the object's environment to filter the classes.

Change multiple checkboxes to a select for Puppetclass.environment field.

Adapt puppetclass#index to show the only parent environment.

Fix typo in variable name, in app/views/environments/index.html.erb.

Remove test that a puppetclass no longer belongs to any environment
before destroying it, in app/models/environment.rb.

--- a/app/views/lookup_keys/index.html.erb
+++ b/app/views/lookup_keys/index.html.erb
@@ -10,6 +10,7 @@
   <tr>
     <th><%= sort :key, :as => "Variable" %> or <%= sort :key, {:as => "Parameter"}, {:class => "alternative"} %></th>
     <th><%= sort :puppetclass %></th>
+    <th><%= sort :'puppetclass.environment', :as => 'Environment' %></th>
     <th>Number of Values</th>
     <th></th>
   </tr>
@@ -22,7 +23,8 @@
               link_to_if_authorized h(lookup_key.key), hash_for_edit_lookup_key_path(:id => lookup_key), :class => (lookup_key.is_param ? "alternative" : nil)
             end %></td>
     <td><%= link_to_if_authorized h(lookup_key.puppetclass), hash_for_edit_puppetclass_path(:id => lookup_key.puppetclass) if lookup_key.puppetclass %></td>
-    <td><%=h lookup_key.lookup_values.count %></td>
+    <td><%= link_to_function lookup_key.puppetclass.environment, 'show_rdoc(this)', :'data-url' => rdoc_classes_path(lookup_key.puppetclass.environment, lookup_key.puppetclass.name) if lookup_key.puppetclass.try(:environment) %></td>
+    <td><%= h lookup_key.lookup_values.count %></td>
     <td><%= display_delete_if_authorized hash_for_lookup_key_path(:id => lookup_key), :confirm => "Delete #{lookup_key.key}?" %></td>
   </tr>
 <% end %>
