--- a/app/views/puppetclasses/index.html.erb
+++ b/app/views/puppetclasses/index.html.erb
@@ -5,7 +5,7 @@
 <table class="table table-bordered table-striped">
   <tr>
     <th><%= sort :name %></th>
-    <th><%= sort :environment, :as => "Environments" %> and documentation</th>
+    <th><%= sort :environment, :as => "Environment" %> and documentation</th>
     <th>Host Group</th>
     <th>Hosts</th>
     <th>Keys</th>
@@ -13,18 +13,12 @@
   </tr>
   <% for puppetclass in @puppetclasses %>
     <tr class="<%= cycle("even", "odd") -%>">
-      <td><%=link_to_if_authorized h(puppetclass.name), hash_for_edit_puppetclass_path(:id => puppetclass) %></td>
-      <td>
-        <% for environment in puppetclass.environments -%>
-          <%= link_to_function environment, 'show_rdoc(this)', :'data-url' => rdoc_classes_path(environment, puppetclass.name) %>
-        <% end %>
-      </td>
+      <td><%= link_to_if_authorized h(puppetclass.name), hash_for_edit_puppetclass_path(:id => puppetclass) %></td>
+      <td><%= link_to_function puppetclass.environment, 'show_rdoc(this)', :'data-url' => rdoc_classes_path(puppetclass.environment, puppetclass.name) %></td>
       <td><%= puppetclass.hostgroups.map {|hg| link_to_if_authorized hg, hash_for_edit_hostgroup_path(:id=>hg)}.to_sentence.html_safe %></td>
-      <td> <%= link_to host_counter(puppetclass), hosts_path(:search => "class = #{puppetclass.name}")%></td>
-      <td><%= link_to @keys_counter[puppetclass.id] || 0, puppetclass_lookup_keys_path(puppetclass) %> </td>
-      <td>
-        <%= display_delete_if_authorized hash_for_puppetclass_path(:id => puppetclass), :confirm => "Delete #{puppetclass.name}?" %>
-      </td>
+      <td><%= link_to host_counter(puppetclass), hosts_path(:search => "class = #{puppetclass.name}") %></td>
+      <td><%= link_to @keys_counter[puppetclass.id] || 0, puppetclass_lookup_keys_path(puppetclass) %></td>
+      <td><%= display_delete_if_authorized hash_for_puppetclass_path(:id => puppetclass), :confirm => "Delete #{puppetclass.name}?" %></td>
     </tr>
   <% end %>
 </table>
