(WIP) Merge smart-vars form
TODO:
* Handle the posted form
* Update or create a smart-var
* Be sure that unlisted lookup_values get deleted

Added "Merge with..." button to lookup_keys/edit.

Added lookup_keys#merge
lookup_keys/merge is a 3 column form:
 - left/right columns to view an existing smart-var
 - middle columns contains a form to edit a smart-var

Used lookup_keys#index to search for lookup_keys of a puppetclass
from AJAX.
Got a problem with params[:search] that is automatically set to
"puppetclass = 123" instead of "puppetclass_id = 123",
and the search_for doesn't work.
Made LookupKey.as_json public.

LayoutHelper.field can work with a nil form ('f').
LayoutHelper.submit_or_cancel accepts a block,
and appends its output to the buttons.

lookup_keys/_fields take a :special_opts hash local,
controlling wether the fields should have help_inline, be all disabled,
etc. in order to reuse in a non-editting form (bunch of inputs, rather).

lookup_keys/_merge_fields either prints the inputs for an existing
lookup key (all disabled), or the form content for a new one.

lookup_keys/_merge_selector permits selecting a puppetclass/lookup_key
to edit.
In the middle column, permits to select the existing/new smart-var
to overwrite/create.
Additional javascript to load the inputs dynamically into the page.

public/javascripts/application.js:
* Basic url#hash parsing.
* Bubble find, as jQuery.closest()'s selector matches only the current
  ancestor, and does not permit selecting its children.
* Fixed getSiblingField to use bubbleFind(), would otherwise select
  fields from sibling columns.

Auto-loading of the left and right columns using the url#hash.

--- a/app/views/lookup_keys/edit.html.erb
+++ b/app/views/lookup_keys/edit.html.erb
@@ -3,5 +3,7 @@
 
 <%= form_for(@lookup_key) do |f| %>
   <%= render 'fields', :f => f %>
-  <%= submit_or_cancel f %>
+  <%= submit_or_cancel f do %>
+    <%= link_to 'Merge with...', url_for(hash_for_merge_lookup_keys_path.merge(:anchor => {:id_left => @lookup_key.id})), :class => 'btn btn-warning' %>
+  <% end -%>
 <% end %>
