--- a/app/views/lookup_keys/_fields.html.erb
+++ b/app/views/lookup_keys/_fields.html.erb
@@ -1,27 +1,28 @@
+<% special_opts ||= { :no_help => false, :no_remove => false, :no_parent => false, :no_name => false, :no_add_values => false } %>
 <div <%= "id=#{(f.object.key || 'new_lookup_keys').to_s.gsub(' ','_')} class='tab-pane fields' " %> >
-  <%= remove_child_link "Remove #{f.object.new_record? ? "Variable" : f.object}", f , {:class => 'btn btn-danger hide'} unless controller_name == "lookup_keys" %>
+  <%= remove_child_link "Remove #{f.object.new_record? ? "Variable" : f.object}", f , filter_html_opts(special_opts, :class => 'btn btn-danger hide') unless special_opts[:no_remove] or controller_name == "lookup_keys" %>
   <%=
     if params["puppetclass_id"] # new smart-var inside a puppetclass (REST nesting only)
       # Show the parent puppetclass as a context, but permit no change
-      select_f f, :puppetclass_id, [Puppetclass.from_param(params["puppetclass_id"])], :id, :to_label, {}, {:label => "Puppet class", :disabled => true}
+      select_f f, :puppetclass_id, [Puppetclass.from_param(params["puppetclass_id"])], :id, :to_label, {}, filter_html_opts(special_opts, :label => "Puppet class", :disabled => true)
     else # new smart-var with no particular context
       # Give a select for choosing the parent puppetclass
-      grouped_select_f f, :puppetclass_id, Puppetclass::EnvironmentByPuppetclass.all, :environments, :to_label, :puppetclass_id, :to_label, { :include_blank => 'None' }, {:label => "Puppet class"}
-    end unless @puppetclass # nested smart-vars form in a tab of puppetclass/_form: no edition allowed, and the puppetclass is already visible as a context
+      grouped_select_f f, :puppetclass_id, Puppetclass::EnvironmentByPuppetclass.all, :environments, :to_label, :puppetclass_id, :to_label, { :include_blank => 'None' }, filter_html_opts(special_opts, :label => "Puppet class")
+    end unless special_opts[:no_parent] or @puppetclass # nested smart-vars form in a tab of puppetclass/_form: no edition allowed, and the puppetclass is already visible as a context
   %>
-  <%= text_f f, :key, :label => "Name" %>
-  <%= checkbox_f f, :is_param, :label => "Class parameter", :help_inline => popover("?", "Whether the smart-variable is a parameter of a parameterized class (checked), or a global parameter (unchecked).", :title => "Class parameter") %>
-  <%= checkbox_f f, :is_mandatory, :label => "Mandatory", :help_inline => popover("?", "If checked, will raise an error if there is no default value and no matcher provide a value.", :title => "Mandatory") %>
-  <%= text_f f, :description %>
+  <%= text_f f, :key, :label => "Name" unless special_opts[:no_name] %>
+  <%= checkbox_f f, :is_param, filter_html_opts(special_opts, :label => "Class parameter", :help_inline => popover("?", "Whether the smart-variable is a parameter of a parameterized class (checked), or a global parameter (unchecked).", :title => "Class parameter")) %>
+  <%= checkbox_f f, :is_mandatory, filter_html_opts(special_opts, :label => "Mandatory", :help_inline => popover("?", "If checked, will raise an error if there is no default value and no matcher provide a value.", :title => "Mandatory")) %>
+  <%= text_f f, :description, filter_html_opts(special_opts, {}) %>
   <%= field f, :default_value do -%>
     <%= label_tag('', :class=>'checkbox') do -%>
-      <%= f.check_box :no_default_value, :onchange => "toggleTextFieldEmptyDisabled(getSiblingField(this, 'default_value'), isFieldChecked(this));", :'data-onready' => (f.object.no_default_value ? '$(this).attr("checked", true);$(this).trigger("change");' : '') %> None
+      <%= f.check_box :no_default_value, filter_html_opts(special_opts, :onchange => "toggleTextFieldEmptyDisabled(getSiblingField(this, 'default_value'), isFieldChecked(this));", :'data-onready' => (f.object.no_default_value ? '$(this).attr("checked", true);$(this).trigger("change");' : '')) %> None
     <% end -%>
-    <%= f.text_area :default_value, :class => "span6", :rows => 2 %><span class="help-inline"><%= popover("?","value to use when there is no match", :title => "Default Value") %></span>
+    <%= f.text_area :default_value, filter_html_opts(special_opts, :class => "span6", :rows => 2) %><% unless special_opts[:no_help] %><span class="help-inline"><%= popover("?","value to use when there is no match", :title => "Default Value") %></span><% end %>
   <% end -%>
   <%= selectable_f f, :validator_type, options_for_select(LookupKey::VALIDATION_TYPES, f.object.validator_type),
     {},
-    { :label => "Type", :class => "medium",
+    filter_html_opts(special_opts, :label => "Type", :class => "medium",
       :help_inline => popover("?","<dl>
        <dt>String</dt> <dd>Everything is taken as a string.</dd>
        <dt>List <small>(constrained)</small></dt> <dd>The input string must be one of those listed in the <em>constraint</em>.<dd>
@@ -34,9 +35,9 @@
        <dt>Hash</dt> <dd>A valid JSON or YAML input, that must evaluate to an object/map/dict/hash.</dd>
        <dt>YAML</dt> <dd>Any valid YAML input.</dd>
        <dt>JSON</dt> <dd>Any valid JSON input.</dd>
-       </dl>", :title => "How values are validated").html_safe}
+       </dl>", :title => "How values are validated").html_safe)
   %>
-  <%= text_f f, :validator_rule, :label => "Constraint", :class => "span6",
+  <%= text_f f, :validator_rule, filter_html_opts(special_opts, :label => "Constraint", :class => "span6",
     :help_inline => popover("?","Used only with some types: <dl>
        <dt>Regexp</dt> <dd>A regular expression the input string must match.</dd>
        <dt>Range</dt> <dd>A range of integers, reals or strings the input must lie within.<br/>
@@ -44,20 +45,20 @@
          Use <code>...</code> to exclude the high bound from the valid range.</dd>
        <dt>List</dt> <dd>A comma separated list of accepted string values.<br/>
          Eg.: <code>80,443</code>.</dd>
-       </dl>", :title => "Constraint")%>
-  <%= textarea_f f, :path, :rows => "4", :value => f.object.path, :label => "Order",
+       </dl>", :title => "Constraint")) %>
+  <%= textarea_f f, :path, filter_html_opts(special_opts, :rows => "4", :value => f.object.path, :label => "Order",
     :help_inline => popover("?", "The order in which matchers keys are processed, first match wins.<br>
     You may use multiple attributes as a matcher key, for example, an order of <code>hostgroup, environment</code>
-    would expect a matcher such as <code>hostgroup = \"web servers\", environment = production</code>", :title => "The order in which values are resolved").html_safe
+    would expect a matcher such as <code>hostgroup = \"web servers\", environment = production</code>", :title => "The order in which values are resolved").html_safe)
   %>
 
   <%# the following field is required to see child validations %>
   <%= f.hidden_field :updated_at, :value => Time.now.to_i %>
   <div class="children_fields">
-    <%= new_child_fields_template(f, :lookup_values, {:partial => "lookup_keys/value"}) %>
+    <%= new_child_fields_template(f, :lookup_values, {:partial => "lookup_keys/value", :form_builder_attrs => {:special_opts => special_opts}}) unless special_opts[:no_add_values] %>
     <%= f.fields_for :lookup_values do |lookup_values| %>
-      <%= render 'lookup_keys/value', :f => lookup_values %>
+      <%= render 'lookup_keys/value', :f => lookup_values, :special_opts => special_opts %>
     <% end %>
-    <%= add_child_link "+ Add Matcher-Value", :lookup_values, { :title => 'add a new matcher-value pair'} %>
+    <%= add_child_link "+ Add Matcher-Value", :lookup_values, { :title => 'add a new matcher-value pair'} unless special_opts[:no_add_values] %>
   </div>
 </div>
